Options page dynamically gets the list of available fields from a sample CAR.

--- a/options.html
+++ b/options.html
@@ -8,30 +8,8 @@
 
 <h3>Available Fields:</h3>
 
-    <div>
-        <input type="checkbox" id="REQD.P.IS_DEFER_APPROVED_Y">Defer Approved:</input></br>
-        <input type="checkbox" id="REQD.P.LIST_IN_README_FILE">Include in Bug Fix List:</input></br>
-        <input type="checkbox" id="REQD.P.BETA_PROGRAM">Include in List of Known Issues:</input></br>
-        <input type="checkbox" id="REQD.P.RALLY_ID">Rally ID</input></br>
-        <input type="checkbox" id="REQD.P.RALLY_STATUS">Rally Status</input></br>
-        <input type="checkbox" id="REQD.P.LEGACY_CAR_ID">Legacy CAR ID:</input></br>
-        <input type="checkbox" id="REQD.P.PROBLEM_DETAILS">Problem Details:</input></br>
-        <input type="checkbox" id="REQD.P.STEPS_TO_REPRODUCE">Steps to Reproduce:</input></br>
-        <input type="checkbox" id="REQD.P.WORKAROUND">Workaround:</input></br>
-        <input type="checkbox" id="REQD.P.PUBLIC_DESCRIPTION">Public Description:</input></br>
-        <input type="checkbox" id="REQD.P.PUBLIC_DETAILS">Public Details:</input></br>
-        <input type="checkbox" id="REQD.P.PUBLIC_WORKAROUND">Public Workaround:</input></br>
-        <input type="checkbox" id="REQD.P.PUBLIC_CATEGORIESAC_TF">Public Categories:</input></br>
-        <input type="checkbox" id="REQD.P.PUBLIC_DOCUMENTED_DATE">Public Documented Date:</input></br>
-        <input type="checkbox" id="REQD.P.SOLUTION_COMPONENT_FIXED">Solution / Component Fixed / Closed Explanation:</input></br>
-        <input type="checkbox" id="REQD.P.PRODUCT_PRIMARY_VERSION_FIXEDAC_TF">Fixed Version / Revision:</input></br>
-        <input type="checkbox" id="REQD.P.PRODUCT_PRIMARY_BUILD_FIXED">Fixed Build  / Minor Revision:</input></br>
-        <input type="checkbox" id="REQD.P.OS_AFFECTEDAC_TF">Affected OS:</input></br>
-        <input type="checkbox" id="REQD.P.IMPLEMENTED_DATE">Implemented Date:</input></br>
-        <input type="checkbox" id="REQD.P.FIXED_PENDING_DATE">Fixed Pending Date:</input></br>
-        <input type="checkbox" id="REQD.P.CLOSED_DATE">Closed Date:</input></br>
-        </br>
-    </div>
+    <div id="fields-div"></div>
+    </br>
     <button id="save">Save</button>
 
 </body>
