Added section visibility options

--- a/options.html
+++ b/options.html
@@ -3,13 +3,16 @@
 <head>
     <title>ChARome Options</title>
     <script src="helpers.js"></script>
+    <link rel="stylesheet" href="options.css">
 </head>
 <body>
 
-<h3>Available Fields:</h3>
+    <h3>Hide Individual Fields:</h3>
+    <div id="fields-div" class="checkboxes"></div>
 
-    <div id="fields-div"></div>
-    </br>
+    <h3>Hide Entire Sections:</h3>
+    <div id="sections-div" class="checkboxes"></div>
+    
     <button id="save">Save</button>
     
     <script src="options.js"></script>
